--- a/main.html
+++ b/main.html
@@ -9,9 +9,10 @@
 
 <body style="padding:40px;">
 	<!-- the entire body must be written by student -->
-	<h2 style="color:#3b99e0; text-align:center;">Shopping cart</h2>
-	<p style="text-align:center;">The customer is very important, the customer will be followed by the customer. Now,as an um,I have no right to be in possession of property.</p>
+	<h2 class="block-heading" style="color:#3b99e0; text-align:center;">Shopping cart</h2>
+	<a style="text-align:center;">The customer is very important, the customer will be followed by the customer. Now,as an um,I have no right to be in possession of property.</a>
     <div class="container">
+		<div class="product">
 		<div class="row">
 			<div class="col-lg-8">
 				 <div class="d-flex align-items-center border-bottom py-3">
@@ -55,6 +56,9 @@
           <strong>$120</strong>
         </div>
 			</div>
+			</div>
+		</div>
+			
 			<div class="col-lg-4">
 				<div class="summary">
 					<h3>Summary</h3>
