--- a/main.html
+++ b/main.html
@@ -7,92 +7,79 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
+
 <body style="padding:40px;">
-	<!-- the entire body must be written by student -->
-	<h2 class="block-heading" style="color:#3b99e0; text-align:center;">Shopping cart</h2>
-	<a style="text-align:center;">The customer is very important, the customer will be followed by the customer. Now,as an um,I have no right to be in possession of property.</a>
+    <h2 class="block-heading" style="color:#3b99e0; text-align:center;">Shopping cart</h2>
+    <p style="text-align:center;">The customer is very important, the customer will be followed by the customer. Now, as an um, I have no right to be in possession of property.</p>
     <div class="container">
-		<div class="product">
-		<div class="row">
-			<div class="col-lg-8">
-				 <div class="d-flex align-items-center border-bottom py-3">
-          <img src="https://via.placeholder.com/60" class="product-img me-3" alt="Phone">
-          <div class="flex-grow-1">
-            <h6 class="mb-1 text-primary">I am very sorry</h6>
-            <small class="text-muted">Display: 5 inches<br>RAM: 4GB<br>Memory: 32GB</small>
-          </div>
-          <div class="me-3">
-            <label>Quantity:</label>
-            <input type="number" class="form-control w-50" value="0">
-          </div>
-          <strong>$120</strong>
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="product">
+                    <div class="d-flex align-items-center border-bottom py-3">
+                        <img src="https://via.placeholder.com/60" class="product-img me-3" alt="Phone">
+                        <div class="flex-grow-1">
+                            <h6 class="mb-1 text-primary">I am very sorry</h6>
+                            <small class="text-muted">Display: 5 inches<br>RAM: 4GB<br>Memory: 32GB</small>
+                        </div>
+                        <div class="me-3">
+                            <label>Quantity:</label>
+                            <input type="number" class="form-control w-50" value="0">
+                        </div>
+                        <strong>$120</strong>
+                    </div>
+					 <div class="d-flex align-items-center border-bottom py-3">
+                        <img src="https://via.placeholder.com/60" class="product-img me-3" alt="Phone">
+                        <div class="flex-grow-1">
+                            <h6 class="mb-1 text-primary">I am very sorry</h6>
+                            <small class="text-muted">Display: 5 inches<br>RAM: 4GB<br>Memory: 32GB</small>
+                        </div>
+                        <div class="me-3">
+                            <label>Quantity:</label>
+                            <input type="number" class="form-control w-50" value="1">
+                        </div>
+                        <strong>$120</strong>
+                    </div>
+					 <div class="d-flex align-items-center border-bottom py-3">
+                        <img src="https://via.placeholder.com/60" class="product-img me-3" alt="Phone">
+                        <div class="flex-grow-1">
+                            <h6 class="mb-1 text-primary">I am very sorry</h6>
+                            <small class="text-muted">Display: 5 inches<br>RAM: 4GB<br>Memory: 32GB</small>
+                        </div>
+                        <div class="me-3">
+                            <label>Quantity:</label>
+                            <input type="number" class="form-control w-50" value="1">
+                        </div>
+                        <strong>$120</strong>
+                    </div>
+                    <!-- Repeat for other products -->
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="summary">
+                    <h3>Summary</h3>
+                    <div class="d-flex justify-content-between mb-2">
+                        <span>Subtotal</span>
+                        <span>$360</span>
+                    </div>
+                    <div class="d-flex justify-content-between mb-2">
+                        <span>Discount</span>
+                        <span>$0</span>
+                    </div>
+                    <div class="d-flex justify-content-between mb-2">
+                        <span>Shipping</span>
+                        <span>$0</span>
+                    </div>
+                    <div class="d-flex justify-content-between mb-2">
+                        <span>Total</span>
+                        <span>$360</span>
+                    </div>
+                    <div>
+                        <button class="btn btn-checkout">Checkout</button>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <!-- Product Item -->
-        <div class="d-flex align-items-center border-bottom py-3">
-          <img src="https://via.placeholder.com/60" class="product-img me-3" alt="Phone">
-          <div class="flex-grow-1">
-            <h6 class="mb-1 text-primary">I am very sorry</h6>
-            <small class="text-muted">Display: 5 inches<br>RAM: 4GB<br>Memory: 32GB</small>
-          </div>
-          <div class="me-3">
-            <label>Quantity:</label>
-            <input type="number" class="form-control w-50" value="1">
-          </div>
-          <strong>$120</strong>
-        </div>
-
-        <!-- Product Item -->
-        <div class="d-flex align-items-center border-bottom py-3">
-          <img src="https://via.placeholder.com/60" class="product-img me-3" alt="Phone">
-          <div class="flex-grow-1">
-            <h6 class="mb-1 text-primary">I am very sorry</h6>
-            <small class="text-muted">Display: 5 inches<br>RAM: 4GB<br>Memory: 32GB</small>
-          </div>
-          <div class="me-3">
-            <label>Quantity:</label>
-            <input type="number" class="form-control w-50" value="1">
-          </div>
-          <strong>$120</strong>
-        </div>
-			</div>
-			</div>
-		</div>
-			
-			<div class="col-lg-4">
-				<div class="summary">
-					<h3>Summary</h3>
-					<div class="d-flex justify-content-between mb-2">
-						<span>Subtotal</span>
-						<span>$360</span>
-					</div>
-					<div class="d-flex justify-content-between mb-2">
-						<span>Discount</span>
-						<span>$0</span>
-					</div>
-					<div class="d-flex justify-content-between mb-2">
-						<span>Shipping</span>
-						<span>$0</span>
-					</div>
-					<div class="d-flex justify-content-between mb-2">
-						<span>Total</span>
-						<span>$360</span>
-					</div>
-					<div>
-						<button class="btn btn-checkout">checkout</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	
- 
-
-
-	
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
+</body>	
 </html>
